--- a/src/views/auth/signIn.ejs
+++ b/src/views/auth/signIn.ejs
@@ -26,7 +26,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="text" class="form-control" id="password" name="password">
+                        <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                         <button type="submit" class="btn btn-primary">Sign In</button>
                 </form>
