--- a/src/views/auth/signUp.ejs
+++ b/src/views/auth/signUp.ejs
@@ -31,7 +31,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="text" class="form-control" id="password" name="password">
+                        <input type="password" class="form-control" id="password" name="password">
                     </div>
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary">Sign Up</button>
