--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,6 +21,8 @@
     <ul>
         <li><a href="/fridges"><i class="bi bi-snow"></i>Fridges</a></li>
         <li><a href="/fridges/ID"><i class="bi bi-snow"></i> Fridges ID</a></li>
+        <li><a href="/auth/SignIn"><i class="bi bi-snow"></i>Sign In</a></li>
+        <li><a href="/auth/SignUp"><i class="bi bi-snow"></i> Sign Up</a></li>
     </ul>
 </div>
 </body>
